<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_chat"
        android:orderInCategory="101"
        android:title="@string/action_chat" />
    <item
        android:id="@+id/action_privacy_policy"
        android:orderInCategory="100"
        android:title="Privacy policy" />
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/arrow_back"
        android:orderInCategory="98"
        android:title="@string/action_undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/arrow_redo"
        android:orderInCategory="99"
        android:title="@string/action_redo"
        app:showAsAction="always" />
</menu>